feat: display conflict tie based on HPs and timer

--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
           ></div>
         </div>
       </div>
+      <div
+        id="mostrarTexto"
+        style="
+          position: absolute;
+          color: white;
+          align-items: center;
+          font-size: 4em;
+          font-weight: 700;
+          justify-content: center;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          display: none;
+        "
+      ></div>
       <canvas></canvas>
     </div>
 
